--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>THE BRAND OF LUXERIOUS FASHION</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <div class="top_line">
+            <div class="top_left">
+                <div>
+                <img src="img/group2.png" alt="group2 image" width="44px" height="38px"></div>
+                <div class="search_glass"></div>
+            </div>
+            <div class="top_right">
+                <div class="search_glass"></div>
+                <div class="search_glass"></div>
+                <div class="search_glass"></div>
+            </div>
+        </div>
+    </div>
+    <div class="header container">
+        <div class="header_left"></div>
+        <div class="header_right">
+            <div class="header_right_item">
+                <div class="header_rect"></div>
+                <div class="header_text"><span style="font-size: 48px;">THE BRAND</span> OF LUXERIOUS <span style="color: #f16d7f;">FASHION</span>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
