--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
         <div class="top_line">
             <div class="top_left">
                 <div>
-                <img src="img/group2.png" alt="group2 image" width="44px" height="38px"></div>
-                <div class="search_glass"></div>
+                <a href="#">    
+                <img src="img/group2.png" alt="group2 image" width="44px" height="38px"></a></div>
+                <a class="search_glass" href="#"></a>
             </div>
             <div class="top_right">
-                <div class="search_glass"></div>
-                <div class="search_glass"></div>
-                <div class="search_glass"></div>
+                <a class="three_lines" href="#"></a>
+                <a class="man"href="#"></a>
+                <a class="trolley" href="#"></a>
             </div>
         </div>
     </div>
@@ -31,6 +32,70 @@
             </div>
         </div>
     </div>
-    
+    <div class="page1 container">
+        <div class="assortiment">
+            <a class="box a" href="#"><div class="page1_text">30% OFF<br>
+                <span style="color: #f16d7f;font-size: 24px;">FOR WOMEN</span></div></a>
+            <a class="box b" href="#"><div class="page1_text">HOT DEAL<br>
+                <span style="color: #f16d7f;font-size: 24px;">FOR MEN</span></div></a>
+            <a class="box c" href="#"><div class="page1_text">NEW ARRIVALS<br>
+                <span style="color: #f16d7f;font-size: 24px;">FOR KIDS</span></div></a>
+            <a class="box d" href="#"><div class="page1_text page1_text1">LUXIROUS & TRENDY<br>
+                <span style="color: #f16d7f;font-size: 24px;">ACCESORIES</span></div></a>
+        </div>
+    </div>    
+    <div class="page2 container">
+        <div class="page2_head">Fetured Items</div>
+        <div class="page2_subhead">Shop for items based on what we featured in this week</div>
+        <div class="item1">
+            <div class="featured_items">
+                <div class="box2 a2">
+                    <a href="#">
+                    <img class="grid2_img" src="img/page2_img1.png" alt="Page2 image1"></a>
+                    <div class="page2_item_name">ELLERY X M'O CAPSULE</div>
+                    <div class="page2_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
+                    <div class="price">$52.00</div>
+                </div>
+                <div class="box2 b2">
+                    <a href="#">
+                    <img class="grid2_img" src="img/page2_img2.png" alt="Page2 image2"></a>
+                    <div class="page2_item_name">ELLERY X M'O CAPSULE</div>
+                    <div class="page2_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
+                    <div class="price">$52.00</div>
+                </div>
+                <div class="box2 c2">
+                    <a href="#">
+                    <img class="grid2_img" src="img/page2_img3.png" alt="Page2 image3"></a>
+                    <div class="page2_item_name">ELLERY X M'O CAPSULE</div>
+                    <div class="page2_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
+                    <div class="price">$52.00</div>
+                </div>
+                <div class="box2 d2">
+                    <a href="#">
+                    <img class="grid2_img" src="img/page2_img4.png" alt="Page2 image4"></a>
+                    <div class="page2_item_name">ELLERY X M'O CAPSULE</div>
+                    <div class="page2_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
+                    <div class="price">$52.00</div>
+                </div>
+                <div class="box2 e2">
+                    <a href="#">
+                    <img class="grid2_img" src="img/page2_img5.png" alt="Page2 image5"></a>
+                    <div class="page2_item_name">ELLERY X M'O CAPSULE</div>
+                    <div class="page2_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
+                    <div class="price">$52.00</div>
+                </div>
+                <div class="box2 f2">
+                    <a href="#">
+                    <img class="grid2_img" src="img/page2_img6.png" alt="Page2 image6"></a>
+                    <div class="page2_item_name">ELLERY X M'O CAPSULE</div>
+                    <div class="page2_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
+                    <div class="price">$52.00</div>
+                </div>
+            </div>
+        </div>
+        <div class="bottom_button">
+            <button class="button">Browse All Product</button>
+        </div>
+    </div>    
 </body>
 </html>
