--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,300&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THE BRAND OF LUXERIOUS FASHION</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container center">
         <div class="top_line">
             <div class="top_left">
                 <div>
@@ -22,7 +25,7 @@
             </div>
         </div>
     </div>
-    <div class="header container">
+    <div class="header container center">
         <div class="header_left"></div>
         <div class="header_right">
             <div class="header_right_item">
@@ -32,7 +35,7 @@
             </div>
         </div>
     </div>
-    <div class="page1 container">
+    <div class="page1 container center">
         <div class="assortiment">
             <a class="box a" href="#"><div class="page1_text">30% OFF<br>
                 <span style="color: #f16d7f;font-size: 24px;">FOR WOMEN</span></div></a>
@@ -44,7 +47,7 @@
                 <span style="color: #f16d7f;font-size: 24px;">ACCESORIES</span></div></a>
         </div>
     </div>    
-    <div class="page2 container">
+    <div class="page2 container center">
         <div class="page2_head">Fetured Items</div>
         <div class="page2_subhead">Shop for items based on what we featured in this week</div>
         <div class="item1">
