--- a/index.html
+++ b/index.html
@@ -10,19 +10,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container center">
-        <div class="top_line">
-            <div class="top_left">
-                <div>
-                <a href="#">    
-                <img src="img/group2.png" alt="group2 image" width="44px" height="38px"></a></div>
-                <a class="search_glass" href="#"></a>
-            </div>
-            <div class="top_right">
-                <a class="three_lines" href="#"></a>
-                <a class="man"href="#"></a>
-                <a class="trolley" href="#"></a>
-            </div>
+    <div class="top_line container center">
+        <div class="top_left">
+            <div>
+            <a href="#">    
+            <img src="img/group2.png" alt="group2 image" width="44px" height="38px"></a></div>
+            <a class="search_glass" href="#"></a>
+        </div>
+        <div class="top_right">
+            <a class="three_lines" href="#"></a>
+            <a class="man" href="#"></a>
+            <a class="trolley" href="#"></a>
         </div>
     </div>
     <div class="header container center">
